--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,41 @@
-alabaster==0.7.12
-Babel==2.6.0
-certifi==2019.3.9
-chardet==3.0.4
-ConfigSpace==0.4.9
-Cython==0.29.6
-docutils==0.14
-idna==2.8
-imagesize==1.1.0
-Jinja2==2.10
-joblib==0.13.2
-liac-arff==2.4.0
-lockfile==0.12.2
-MarkupSafe==1.1.1
-nose==1.3.7
-numpy==1.14.5
-packaging==19.0
-pandas==0.24.2
-psutil==5.6.1
-Pygments==2.3.1
-pynisher==0.5.0
-pyparsing==2.3.1
-pyrfr==0.7.4
-python-dateutil==2.8.0
-pytz==2018.9
-PyYAML==5.1
-requests==2.21.0
-scikit-learn==0.19.2
-scipy==1.2.1
-six==1.12.0
-smac==0.8.0
-snowballstemmer==1.2.1
-Sphinx==1.8.5
-sphinx-rtd-theme==0.4.3
-sphinxcontrib-websupport==1.1.0
-typing==3.6.6
-urllib3==1.24.1
-xgboost==0.82
-matplotlib==3.0.2
+alabaster
+Babel
+certifi
+chardet
+ConfigSpace
+Cython
+Click
+docutils
+idna
+imagesize
+Jinja2
+joblib
+liac-arff
+lockfile
+MarkupSafe
+nose
+numpy
+packaging
+pandas
+psutil
+Pygments
+pynisher
+pyparsing
+pyrfr
+python-dateutil
+pytz
+PyYAML
+requests
+scikit-learn
+scipy
+seaborn
+six
+smac
+snowballstemmer
+Sphinx
+sphinx-rtd-theme
+sphinxcontrib-websupport
+typing
+urllib3
+xgboost
+matplotlib
